--- a/.env.prod
+++ b/.env.prod
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:NIDtvT4spfDcBGTFFQC/km1irXXMMUdo+Wab+IBhUiA=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=example_app
+DB_DATABASE=auto-deploy
 DB_USERNAME=Trinhdev123
 DB_PASSWORD=Trinhdev123
 
